# chatgpt-cli

./: README.md  chatgpt-cli
chatgpt-cli_source/: CMakeLists.txt
chatgpt-cli_source/core/: chat_engine.cpp  chat_engine.h  main.cpp
chatgpt-cli_source/gtk/: app.py  ui.glade
chatgpt-cli_source/python/: bridge.py  chatgpt_client.py
